change the get for all rentals to return the all the properties of a CarDto